# tauri-plugin-askit

./: Cargo.toml  build.rs  package.json
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: add_agent.toml  add_agent_stream.toml  add_agent_stream_agent.toml  add_agent_stream_channel.toml  add_agent_stream_edge.toml  add_agent_stream_node.toml  add_agents_and_channels.toml  add_channel.toml  copy_sub_stream.toml  get_agent_config_specs.toml  get_agent_spec.toml  get_agent_stream_info.toml  get_agent_stream_infos.toml  get_agent_stream_spec.toml  get_agent_streams.toml  get_running_agent_streams.toml  insert_agent_stream.toml  new_agent_spec.toml  new_agent_stream.toml  new_agent_stream_agent.toml  new_agent_stream_node.toml  remove_agent.toml  remove_agent_stream.toml  remove_agent_stream_agent.toml  remove_agent_stream_channel.toml  remove_agent_stream_edge.toml  remove_agent_stream_node.toml  remove_channel.toml  rename_agent_stream.toml  set_agent_stream_spec.toml  start_agent_stream.toml  stop_agent_stream.toml  unique_stream_name.toml  update_agent_spec.toml  update_agent_stream_spec.toml
permissions/schemas/: schema.json
src/: commands.rs  lib.rs  models.rs  observer.rs
